[build-system]
requires = ["setuptools>=42,<=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lbfgsb"
dynamic = ["version"]
authors = [{ name = "Antoine Collet", email = "antoinecollet5@gmail.com" }]
readme = "README.rst"
description = "A python impementation of the famous L-BFGS-B quasi-Newton solver."
keywords = [
    "Limited",
    "Bounded",
    "Minimization",
    "Gradient descent",
    "Quasi-Newton",
    "Parameters estimation",
    "L-BFGS-B",
]
license = { file = "LICENSE" }
dependencies = [
    "setuptools",
    "wheel",
    "numpy>=1.2",
    "scipy>=1.6.2",
    "packaging; python_version < '3.8'",
    "typing_extensions; python_version < '3.8'",
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://pypi.org/project/lbfgsb/"
Documentation = "https://lbfgsb.readthedocs.io/en/latest/"
Repository = "https://github.com/antoinecollet5/lbfgsb"
Issues = "https://github.com/antoinecollet5/lbfgsb/issues"
Changelog = "https://github.com/antoinecollet5/lbfgsb/blob/master/CHANGELOG.rst"

[tool.setuptools]
py-modules = []
packages = ["lbfgsb"]

[tool.setuptools.dynamic]
version = { attr = "lbfgsb.__about__.__version__" }

[tool.rye]
dev-dependencies = [
    "pytest>=8.2.2",
    "py7zr",
    "testpath",
    "pre-commit",
    "mypy",
    "tox",
    "coverage",
]

[project.optional-dependencies]
all = ['lbfgsb[numba, docs, tests, lint, install]']
numba = ["numba"]
docs = [
    "sphinx<9",
    "nbsphinx",
    "nbsphinx-link>=1.3.1",
    "jupyter_sphinx>=0.3.2",
    "sphinx-jsonschema>=1.15",
    "pygments>=2.11.1",
    "pydata-sphinx-theme",
    "sphinxcontrib-bibtex",
]
tests = [
    "twine==1.14.0",
    "pytest",
    "pytest-runner",
    "pytest-cov",
    "pytest-cookies",
    "coverage",
    "numdifftools",
]
lint = ["pre-commit", "codespell>=2.1.0", "ruff", "ty"]
install = ["pip", "wheel"]

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
src = ["src", "tests", "docs"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pylint.LOGGING]
# Format style used to check logging format string. `old` means using %
# formatting, `new` is for `{}` formatting,and `fstr` is for f-strings.
logging-format-style = "fstr"
