[metadata]
name = lbfgsb
version = attr: lbfgsb.__version__
author = attr: lbfgsb.__author__
author_email = antoinecollet5@gmail.com
description = A python impementation of the famous L-BFGS-B quasi-Newton solver.
long_description = file: README.rst, CHANGELOG.rst, LICENSE
url = https://github.com/antoinecollet5/lbfgsb
keywords = Limited, Bounded, Minimization, Gradient descent, Quasi-Newton, Parameters estimation, L-BFGS-B
license = MIT license
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.7, <4
install_requires =
    importlib_metadata
    numpy
zip_safe = False
include_package_data = True

[bdist_wheel]
universal = 1

[flake8]
exclude = .git,__pycache__,build,dist,docs,examples
max-line-length = 88
ignore =
    # whitespace before ':'
    E203,
    # line break before binary operator
    W503,
    # line length too long
    E501,
    # do not assign a lambda expression, use a def
    E731,
    # ambiguous variable name
    E741,
    # Double quotes found but single quotes preferred
    Q000,
    # Black would make changes
    BLK100,

[aliases]
# Define setup.py command aliases here
test = pytest

[codespell]
skip = *.pyc,*.gif,*.png,*.jpg,*.ply, ./bibliography.bib,*.ipynb
ignore-words-list = lod,byteorder,flem,parm,doubleclick,revered,inout,fro,nd,sies,COLLET,collet,Collet
quiet-level = 3

[pylint.LOGGING]
# Format style used to check logging format string. `old` means using %
# formatting, `new` is for `{}` formatting,and `fstr` is for f-strings.
logging-format-style=fstr
